# python-todo-list

./: .gitignore  README.md  main.py  pyproject.toml  todo_list.json
.github/workflow/: python-app.yml
app/: cli.py  utils.py
tests/: test_utils.py
