[project]
name = "python-todo-list"
version = "0.1.0"
description = "A simple CLI TODO list app."
authors = [
    { name = "Cynthia" }
]
readme = "README.md"
requires-python = "3.9.6"

dependencies = [
    "pytest >=8.4.1,<9.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
todo = "app.cli:main"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]